--- a/comandos-em-sala/arraylist_ex/.project
+++ b/comandos-em-sala/arraylist_ex/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>arrayList2</name>
+	<name>arraylist_ex</name>
 	<comment></comment>
 	<projects>
 	</projects>
