codigos comentados para efetuação da prova de poo

--- a/comandos-em-sala/.project
+++ b/comandos-em-sala/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>aula7_comentarios</name>
+	<name>exercicio4_agregacao_composicao</name>
 	<comment></comment>
 	<projects>
 	</projects>
